# Program-manager

./: README.md
etc/: config.csv  config.json  configAsus.csv
src/: EditUI.py  Program-manager.py  ProgramManager.py
tmp/: CMakeLists.txt  calculator.py  cc.cpp  grafics.py  hola.py  hola2.py  ssh.py  tablas.ipynb  term.py
tmp/Calculadora/src/: calculator.py
tmp/componente_c/: CMakeLists.txt
tmp/componente_c/src/: CMakeCache.txt  CMakeLists.txt  Contador  Makefile  cmake_install.cmake  contador.cpp
tmp/hola/src/: hola.py
